--- a/data_18.ipynb
+++ b/data_18.ipynb
@@ -2,31 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "285b628d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'date': '2024-12-03', 'id': '0083123', 'result': [2, 6, 1], 'total': 9, 'process_time': '2025-06-23 14:52:28.922186+07:00'}\n",
-      "{'date': '2024-12-03', 'id': '0083124', 'result': [6, 4, 5], 'total': 15, 'process_time': '2025-06-23 14:52:28.922186+07:00'}\n",
-      "{'date': '2024-12-03', 'id': '0083125', 'result': [2, 6, 6], 'total': 14, 'process_time': '2025-06-23 14:52:28.922186+07:00'}\n",
-      "{'date': '2024-12-03', 'id': '0083126', 'result': [6, 3, 4], 'total': 13, 'process_time': '2025-06-23 14:52:28.922186+07:00'}\n",
-      "{'date': '2024-12-03', 'id': '0083127', 'result': [1, 6, 2], 'total': 9, 'process_time': '2025-06-23 14:52:28.922186+07:00'}\n",
-      "{'date': '2024-12-03', 'id': '0083128', 'result': [6, 5, 5], 'total': 16, 'process_time': '2025-06-23 14:52:28.922186+07:00'}\n",
-      "{'date': '2024-12-03', 'id': '0083129', 'result': [3, 6, 6], 'total': 15, 'process_time': '2025-06-23 14:52:28.896467+07:00'}\n",
-      "{'date': '2024-12-03', 'id': '0083130', 'result': [5, 5, 6], 'total': 16, 'process_time': '2025-06-23 14:52:28.896467+07:00'}\n",
-      "{'date': '2024-12-03', 'id': '0083131', 'result': [2, 6, 2], 'total': 10, 'process_time': '2025-06-23 14:52:28.896467+07:00'}\n",
-      "{'date': '2024-12-03', 'id': '0083132', 'result': [6, 4, 4], 'total': 14, 'process_time': '2025-06-23 14:52:28.896467+07:00'}\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Users\\\\OneBim\\\\Desktop\\\\data\\\\vietlott-data\\\\data\\\\bingo18.jsonl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m file_path = \u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mC:\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mUsers\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mOneBim\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mDesktop\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mvietlott-data\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mbingo18.jsonl\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      5\u001b[39m results = []\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mutf-8\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m      7\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f:\n\u001b[32m      8\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m line.strip():\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\interactiveshell.py:343\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    336\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    337\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    338\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    339\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    340\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    341\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m343\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'C:\\\\Users\\\\OneBim\\\\Desktop\\\\data\\\\vietlott-data\\\\data\\\\bingo18.jsonl'"
      ]
     }
    ],
    "source": [
     "import json\n",
     "\n",
-    "file_path = r\"C:\\Users\\OneBim\\Desktop\\data\\vietlott-data\\data\\bingo18.jsonl\"\n",
+    "file_path = r\"C:\\Users\\HP\\Desktop\\vietlott-data\\data\\bingo18.jsonl\"\n",
     "\n",
     "results = []\n",
     "with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
@@ -48,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "231c95cb",
    "metadata": {},
    "outputs": [
@@ -103,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "70750d0e",
    "metadata": {},
    "outputs": [
@@ -161,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "48b4e472",
    "metadata": {},
    "outputs": [
@@ -193,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7c10ac5d",
    "metadata": {},
    "outputs": [
@@ -243,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e58a1fb0",
    "metadata": {},
    "outputs": [
@@ -446,6 +442,60 @@
     "for nid in sorted(result.keys()):\n",
     "    print(f\"new_id {nid}: total {result[nid]['most_common_total']} xuất hiện {result[nid]['count']} lần\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9506836",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: 'C:\\\\Users\\\\OneBim\\\\Desktop\\\\data\\\\vietlott-data\\\\data\\\\split_newid'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mcollections\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Counter\n\u001b[32m      5\u001b[39m input_dir = \u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mC:\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mUsers\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mOneBim\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mDesktop\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mvietlott-data\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m\\\u001b[39m\u001b[33msplit_newid\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m file_name \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_dir\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m      8\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m file_name.startswith(\u001b[33m\"\u001b[39m\u001b[33mbingo18_newid_\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m file_name.endswith(\u001b[33m\"\u001b[39m\u001b[33m.jsonl\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m      9\u001b[39m         file_path = os.path.join(input_dir, file_name)\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [WinError 3] The system cannot find the path specified: 'C:\\\\Users\\\\OneBim\\\\Desktop\\\\data\\\\vietlott-data\\\\data\\\\split_newid'"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "from collections import Counter\n",
+    "\n",
+    "input_dir = r\"C:\\Users\\OneBim\\Desktop\\data\\vietlott-data\\data\\split_newid\"\n",
+    "\n",
+    "for file_name in os.listdir(input_dir):\n",
+    "    if file_name.startswith(\"bingo18_newid_\") and file_name.endswith(\".jsonl\"):\n",
+    "        file_path = os.path.join(input_dir, file_name)\n",
+    "\n",
+    "        # Đọc file\n",
+    "        results = []\n",
+    "        with open(file_path, \"r\", encoding=\"utf-8\") as f_in:\n",
+    "            for line in f_in:\n",
+    "                if line.strip():\n",
+    "                    rec = json.loads(line)\n",
+    "                    res = tuple(rec.get(\"result\", []))  # dùng tuple để đếm\n",
+    "                    if res:\n",
+    "                        results.append(res)\n",
+    "\n",
+    "        counter = Counter(results)\n",
+    "        duplicates = {res: cnt for res, cnt in counter.items() if cnt > 1}\n",
+    "\n",
+    "        print(f\"\\n📂 File: {file_name}\")\n",
+    "        if duplicates:\n",
+    "            # result xuất hiện nhiều nhất\n",
+    "            most_common_res, freq = counter.most_common(1)[0]\n",
+    "            print(f\"🔎 result xuất hiện nhiều nhất: {list(most_common_res)} ({freq} lần)\")\n",
+    "            print(\"👉 Các result trùng khác:\")\n",
+    "            for res, cnt in duplicates.items():\n",
+    "                print(f\"   {list(res)} -> {cnt} lần\")\n",
+    "        else:\n",
+    "            print(\"✅ Không có result nào trùng lặp trong file này\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -464,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
